--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.1.0",
-    "jade": "*"
+    "express": "3.0.6",
+    "jade": "*",
+    "mongoose": "3.x",
+    "fb": "0.1.0"
+  },
+  "engines": {
+    "node": "0.8.14 ",
+    "npm": "1.1.65"
   }
 }
