--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.0.6",
+    "express": "*",
     "jade": "*",
-    "mongoose": "3.x",
-    "fb": "0.1.0",
-    "request" :  "2.1.x",
-    "cheerio" : "0.10.x"
+    "mongoose": "*",
+    "fb": "*",
+    "request" :  "*",
+    "cheerio" : "*"
 
   },
   "engines": {
-    "node": "0.8.19",
-    "npm": "1.1.37"
+    "node": "*",
+    "npm": "*"
   }
 }
